syntax = "proto3";

package proto;
option go_package = "./proto";

service UserService {
    rpc CreateUser (CreateUserRequest) returns (UserResponse);
    rpc GetUser (GetUserRequest) returns (UserResponse);
    rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
    rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message User {
    string id = 1;
    string email = 2;
    string name = 3;
    string role = 4;
    string created_at = 5;
    string updated_at = 6;
}

message CreateUserRequest {
    string email = 1;
    string password = 2;
    string name = 3;
}

message GetUserRequest {
    string id = 1;
}

message UpdateUserRequest {
    string id = 1;
    string email = 2;
    string name = 3;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    bool success = 1;
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    bool valid = 1;
    string user_id = 2;
    string role = 3;
}

message UserResponse {
    User user = 1;
    string token = 2;
}
